tests/conformance/invalid/pending_u_reconocido_no_habilitado.svp
query_spec Q1 {
  query_type: PendingU;
  scope: Trajectory;
  restrictions: [];
}
